force-app/main/default/objects/DuplicateRecordItems__c/DuplicateRecordItems__c.object-meta.xml
<CustomObject>
    <label>重複レコード項目</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>重複レコード項目名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>