force-app/main/default/objects/DuplicateRecordItems__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Lead_Record__r.Address__c</formula>
    <label>住所</label>
    <type>Text</type>
</CustomField>