force-app/main/default/objects/DuplicateRecordItems__c/fields/DuplicateRecordSet__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRecordSet__c</fullName>
    <label>重複レコードセット</label>
    <referenceTo>DuplicateRecordSets__c</referenceTo>
    <relationshipLabel>重複レコード項目</relationshipLabel>
    <relationshipName>DuplicateRecordItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>