force-app/main/default/objects/DuplicateRecordItems__c/fields/Email2__c.field-meta.xml
<CustomField>
    <fullName>Email2__c</fullName>
    <formula>MemberRecord__r.mail2__c</formula>
    <label>メール2</label>
    <type>Text</type>
</CustomField>