force-app/main/default/objects/DuplicateRecordItems__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <formula>IF( NOT(ISBLANK(Lead_Record__r.Id )), Lead_Record__r.Email__c ,IF( NOT(ISBLANK(MemberRecord__r.mail__c )), MemberRecord__r.mail__c , MemberRecord__r.mail2__c ))</formula>
    <label>メール</label>
    <type>Text</type>
</CustomField>