force-app/main/default/objects/DuplicateRecordItems__c/fields/Lead_Record__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>リードレコード</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>重複レコード項目</relationshipLabel>
    <relationshipName>Duplicate_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>