force-app/main/default/objects/DuplicateRecordItems__c/fields/MemberRecord__c.field-meta.xml
<CustomField>
    <fullName>MemberRecord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員情報レコード</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>重複レコード項目</relationshipLabel>
    <relationshipName>Duplicate_Member</relationshipName>
    <type>Lookup</type>
</CustomField>