force-app/main/default/objects/DuplicateRecordItems__c/fields/MobilePhone2__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone2__c</fullName>
    <formula>IF(NOT(ISBLANK( Lead_Record__c )), Lead_Record__r.MobilePhone2__c , MemberRecord__r.mobile_tel_no2__c )</formula>
    <label>携帯電話2</label>
    <type>Text</type>
</CustomField>