force-app/main/default/objects/DuplicateRecordItems__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <formula>IF(NOT(ISBLANK( Lead_Record__c )), Lead_Record__r.MobilePhone__c ,IF(NOT(ISBLANK( MemberRecord__r.mobile_tel_no__c )),MemberRecord__r.mobile_tel_no__c, MemberRecord__r.mobile_tel_no2__c ))</formula>
    <label>携帯電話</label>
    <type>Text</type>
</CustomField>