force-app/main/default/objects/DuplicateRecordItems__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <formula>IF(NOT(ISBLANK( Lead_Record__c )), Lead_Record__r.Phone__c , MemberRecord__r.tel_no__c )</formula>
    <label>電話</label>
    <type>Text</type>
</CustomField>