force-app/main/default/objects/DuplicateRecordItems__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead_Record__c</columns>
    <columns>MemberRecord__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>